--- a/Financialwebsite/css/Default.css
+++ b/Financialwebsite/css/Default.css
@@ -8,3 +8,12 @@
 .header{
 	background-color: darkgrey;
 }
+.TableNOTE{
+	font-size: 0.375rem;
+	font-weight: 300;
+	font-family: "宋体";
+}
+.TableTopBackColor{
+	background-image: linear-gradient(#0079d5,rgb(255,255,255));
+	height: 50px;
+}
