--- a/Financialwebsite/css/Default.css
+++ b/Financialwebsite/css/Default.css
@@ -1,19 +1,42 @@
-.red{
+.red {
 	color: red;
 }
-.bluebackcolor{
+
+.bluebackcolor {
 	background-color: #0079d5;
 	color: white;
 }
-.header{
+
+.header {
 	background-color: darkgrey;
 }
-.TableNOTE{
+
+.TableNOTE {
 	font-size: 0.375rem;
 	font-weight: 300;
 	font-family: "宋体";
 }
-.TableTopBackColor{
-	background-image: linear-gradient(#0079d5,rgb(255,255,255));
+
+.TableTopBackColor {
+	background-image: linear-gradient(#0079d5, rgb(255, 255, 255));
 	height: 50px;
+}
+
+.mainpageHeader {
+	width: 1000px;
+	margin: 10px auto 10px auto;
+}
+
+.mainpage {
+	width: 1000px;
+	margin: 10px auto 10px auto;
+	border: 1px solid #0078d5;
+}
+
+table {
+	border-collapse: collapse;
+}
+
+a {
+	text-decoration: none;
 }
