--- a/financial_report/styles.css
+++ b/financial_report/styles.css
@@ -67,10 +67,8 @@ a:anylink :hover {
 .flex-container ul {
     display: flex;
     list-style: none;
-    padding: 0;
-    margin: 0;
     justify-content: center; /* 水平居中 */
-    margin-left: 81px;
+    margin-left: 3em;
 }
 .flex-container li {
     margin-right: 1px; /* 调整元素之间的间距 */
